# pin_transmittance_sampling

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backlog.txt  cmake-build-win10-vs2019.bat  cmake-build-win10-vs2022.bat  cmake-build_all-win10-vs2022.bat  last_session.json
cmakelistold/: CMakeLists.txt
config/: 2.json  direct_1.json  gvar.json  quicksaveýýýý.json  test123.json
resources/models/arrow/: arrow.mtl
resources/models/arrow_cursor/: arrow_cursor.mtl
resources/models/cornell_box_large_light_source/: cornell_box.mtl
resources/models/cornell_box_small_light_source/: cornell_box.mtl
resources/models/sponza/: sponza_v2.mtl  sponza_v3.mtl
resources/models/under_the_c/: scene_1.blend  scene_1.blend1  scene_1.mtl  scene_2.blend  scene_2.blend1  scene_2.mtl  scene_3.blend  scene_3.blend1  scene_3.mtl  scene_4.blend  scene_4.blend1  scene_4.mtl  scene_5.blend  scene_5.blend1  scene_5.mtl  scene_eval_1.blend  scene_eval_1.blend1  scene_eval_1.mtl  scene_eval_2.blend  scene_eval_2.blend1  scene_eval_2.mtl
resources/scalarFields/: bunny_512x512x361_uint16.raw.REMOVED.git-id  pawpawsaurus_958x646x1088_uint16.raw.REMOVED.git-id  present_492x492x442_uint16.raw.REMOVED.git-id  zeiss_680x680x680_uint8.raw.REMOVED.git-id
resources/shaders/applications/gaussian_mixture/: gaussian_mixture.comp
resources/shaders/applications/pins/: pins_common.glsl  pins_eval_transmittance.comp  pins_grid_gen.comp  pins_render.comp
resources/shaders/applications/pins_compare/: pins_common.glsl  pins_grid_gen.comp  pins_render.comp  pins_render.vert  pins_render_gaussian.frag  pins_render_gaussian_nn.frag  pins_render_gaussian_nn_grid.frag
resources/shaders/applications/pins_path_tracing/: pins_common.glsl
resources/shaders/applications/secondary_ray/: pins_common.glsl  pins_grid_gen.comp  pins_render.vert  pins_render_gaussian.frag  pins_render_gaussian_fog.frag  pins_render_gaussian_nn.frag  pins_render_gaussian_nn_grid.frag  pins_visualize.frag  render_env_map.comp  secondary_pins_render.vert  sphere_visualize.frag
resources/shaders/applications/test_app/: test_shader.comp
resources/shaders/applications/transmittance_estimation/: transmittance_estimation.comp
scripts/: distance_sampling.py  plot_mse.py
src/0.1.01/applications/cube_intersect/: main.cpp
src/0.1.01/applications/pins/: main.cpp
src/0.1.01/applications/pins_compare/: DataStructs.h  main.cpp  materials.h
src/0.1.01/applications/pins_path_tracing/: main.cpp
src/0.1.01/applications/secondary_ray/: DataStructs.h  main.cpp  materials.h
src/0.1.01/applications/test_app/: main.cpp
src/0.1.01/applications/transmittance_estimation/: main.cpp
src/0.1.01/framework/vka/: common.h  compatibility.h  global_state.h  global_var.h
src/0.1.02/applications/direct_illumination/: app_data.h  config.h  main.cpp  shaderStructs.h
src/0.1.02/framework/vka/: vka.h
src/0.1.03/applications/minimal_path_tracer/: config.h  main.cpp
src/0.1.03/applications/test_app/: main.cpp
src/0.1.03/applications/volume_path_tracer/: EventManager.cpp  EventManager.h  config.h  main.cpp  shader_interface.h  ui.cpp  ui.h  utility.cpp  utility.h
src/0.1.03/framework/vka/: globals.h  vka.h
src/0.1.04/applications/comparative_path_tracer/: constants.h  main.cpp  ui.cpp  ui.h
src/0.1.04/applications/minimal_debug_path_tracer/: config.h  main.cpp  shader_interface.h  ui.cpp  ui.h
src/0.1.04/applications/minimal_path_tracer/: config.h  main.cpp  shader_interface.h
src/0.1.04/applications/pin_ablation_study/: config.h  constants.h  custom_volume_sampler_smd.cpp  custom_volume_sampler_smd.h  main.cpp  pt_debug.cpp  pt_debug.h  pt_interface.cpp  pt_interface.h  ui.cpp  ui.h
src/0.1.04/applications/pin_evaluation/: OfflineRenderer.cpp  OfflineRenderer.h  SinglePassOfflineRenderer.cpp  SinglePassOfflineRenderer.h  config.h  constants.h  custom_volume_sampler_smd.cpp  custom_volume_sampler_smd.h  main.cpp  misc.cpp  misc.h  parse_args.cpp  parse_args.h  pt_debug.cpp  pt_debug.h  pt_interface.cpp  pt_interface.h  pt_resources.cpp  pt_resources.h  ui.cpp  ui.h
src/0.1.04/applications/pin_path_tracer/: config.h  constants.h  main.cpp  shader_interface.h  ui.cpp  ui.h
src/0.1.04/applications/volume_path_tracer/: EventManager.h  config.h  main.cpp  shader_interface.h  ui.h  utility.h
src/0.1.04/framework/vka/: globals.h  vka.h
src/applications/cube_intersect/: main.cpp
src/applications/gaussian_mixture/: main.cpp
src/applications/pins/: main.cpp
src/applications/pins_compare/: DataStructs.h  main.cpp  materials.h
src/applications/pins_path_tracing/: main.cpp
src/applications/secondary_ray/: DataStructs.h  main.cpp  materials.h
src/applications/test_app/: main.cpp
src/applications/transmittance_estimation/: main.cpp
src/framework/vka/: common.h  compatibility.cpp  compatibility.h  global_state.cpp  global_state.h  global_var.h  mock.cpp  mock.h  tmp.txt
src/framework/vka/allocators/: CmdAllocator.cpp  CmdAllocator.h  MemAllocator.cpp  MemAllocator.h  QueryAllocator.cpp
src/framework/vka/combined_resources/: AccelerationStructur.h  Buffer.h  CmdBuffer.cpp  CmdBuffer.h  Image.cpp  Image.h
src/framework/vka/context/: GlfwWindow.cpp  GlfwWindow.h  setup.cpp  setup.h
src/framework/vka/default/: ConfigurableRenderPass.cpp  ConfigurableRenderPass.h  DefaultModels.cpp  DefaultModels.h  DefaultRenderPass.cpp  DefaultRenderPass.h
src/framework/vka/experimental/: EnvironmentMap.h
src/framework/vka/gui/: ImGuiWrapper.h  imgui_wrapper.h
src/framework/vka/initializers/: misc.h
src/framework/vka/input/: Camera.cpp  Camera.h  FixedCamera.cpp  FixedCamera.h
src/framework/vka/loaders/: ImageLoader.h  load_obj.cpp  load_obj.h
src/framework/vka/render_model/: common.h  common2.h  vertex_macros.h
src/framework/vka/resource/: ComputePipeline.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  PipelineLayout.cpp  PipelineLayout.h  RasterizationPipeline.cpp  RasterizationPipeline.h  RayTracingPipeline.cpp  RayTracingPipeline.h  Resource.cpp  Resource.h  Sampler.h  Shader.h
src/framework/vka/resources/: Resource.cpp  (+10 more)
(+537 files in other folders)
